; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/mm/extr_fault.c_bust_spinlocks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/mm/extr_fault.c_bust_spinlocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oops_in_progress = common dso_local global i32 0, align 4
@console_loglevel = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bust_spinlocks(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* @oops_in_progress, align 4
  br label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @console_loglevel, align 4
  store i32 %8, i32* %3, align 4
  %9 = call i32 (...) @console_unblank()
  store i32 0, i32* @oops_in_progress, align 4
  store i32 15, i32* @console_loglevel, align 4
  %10 = call i32 @printk(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %3, align 4
  store i32 %11, i32* @console_loglevel, align 4
  br label %12

12:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @console_unblank(...) #1

declare dso_local i32 @printk(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
